# inheritance-calculator-web

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend-test.yml  docker-build.yml  frontend-test.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b42994db1a14_initial_migration_with_all_models.py
backend/app/: __init__.py  auth.py  config.py  db.py  main.py
backend/app/api/: calculate.py  cases.py  health.py
backend/app/models/: __init__.py  case.py  user.py
backend/app/schemas/: __init__.py  case.py  user.py
backend/app/services/: __init__.py  calculation_service.py  neo4j_service.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/cases/[id]/: page.tsx
frontend/app/cases/[id]/calculate/: page.tsx
frontend/app/cases/[id]/editor/: page.tsx
frontend/app/cases/new/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: FamilyTreeEditor.tsx
frontend/lib/: api.ts  auth.ts  calculate.ts  cases.ts
frontend/store/: authStore.ts
