[project]
name = "inheritance-calculator-web-backend"
version = "0.1.0"
description = "FastAPI backend for inheritance calculator web application"
authors = [
    { name = "Kawahara", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver

    # Neo4j
    "neo4j>=5.0.0",

    # Authentication
    "fastapi-users[sqlalchemy]>=12.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",

    # Core Business Logic (using local path)
    "inheritance-calculator-core[agents] @ file:///Users/k-kawahara/Dev-Work/inheritance-calculator-core",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",  # For file uploads
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",  # For testing async endpoints
    "faker>=20.0.0",  # For test data generation
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=app --cov-report=html --cov-report=term-missing"
